# actionmesh

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml  requirements.txt
actionbench/: README.md  benchmark.py  chamfer.py  evaluate_dataset.py  icp.py  sample_mesh.py  sample_point_cloud.py
actionmesh/: pipeline.py  pipeline_with_3d.py  utils.py
actionmesh/configs/: actionmesh.yaml  actionmesh_fast.yaml  actionmesh_fast_lowram.yaml  actionmesh_lowram.yaml
actionmesh/io/: __init__.py  glb_export.py  mesh_io.py  video_input.py
actionmesh/model/: image_encoder.py  temporal_autoencoder.py  temporal_denoiser.py
actionmesh/model/utils/: attention_processor.py  block.py  embeddings.py  pointcloud_sampling.py  rotary_embedding.py  storage.py  tensor_ops.py  timesteps.py
actionmesh/preprocessing/: __init__.py  background_removal.py  image_processor.py  mesh_processor.py
actionmesh/render/: cameras.py  renderer.py  utils.py  visualizer.py
actionmesh/scheduler/: guidance.py  scheduler.py
assets/docs/: sam2_extraction_guide.md
assets/examples/panda/: panda.glb
inference/: video_and_3d_to_animated_mesh.py  video_to_animated_mesh.py
notebooks/: ActionMesh.ipynb
